<resources>
    <string name="app_name">DobuSoccerX</string>
    <string name="favourite">favourite</string>
    <string-array name="leagueName">
        <item>English Premiere League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Portugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string-array name="leagueId">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
    <string-array name="leagueBadgeUrl">
        <item>https://www.thesportsdb.com/images/media/league/badge/i6o0kh1549879062.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8f5jmf1516458074.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/0j55yv1534764799.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/mmd1de1541938367.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/7onmyv1534768460.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/dqo6r91549878326.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/cplp641535733210.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/sfhanl1547383730.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vw72bl1534096708.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vm1qlp1535986713.png</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Here…</string>
    <string name="search">search</string>
    <string name="officialWeb">Official Website</string>
    <string name="prevMatch">Previous Match</string>
    <string name="nextMatch">Next Match</string>
    <string name="league_fan_art"/>
    <string name="zero">0</string>
    <string name="noTeam">No Team</string>
    <string name="teamName">Team</string>
    <string name="teamPlay">P</string>
    <string name="teamWin">W</string>
    <string name="teamDraw">D</string>
    <string name="teamLose">L</string>
    <string name="badge">badge</string>
    <string name="noData">No Data</string>
    <string name="noDescription">No Description</string>
    <string name="nationality">Nationality:</string>
    <string name="playerinfo">Player Info</string>
    <string name="noContent">-</string>
    <string name="position">Position:</string>
    <string name="number">Number:</string>
    <string name="wages">Wages:</string>
    <string name="playerDescription">Player Description</string>
</resources>
