<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.StandingsFragment"
        android:padding="16dp">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">
        <TextView
                android:text="@string/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="0.5"
                android:textStyle="bold" android:textAlignment="textStart" android:textSize="16sp"/>
        <TextView
                android:text="@string/teamPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                android:textStyle="bold" android:textAlignment="center" android:textSize="16sp"/>
        <TextView
                android:text="@string/teamWin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                android:textStyle="bold" android:textAlignment="center" android:textSize="16sp"/>
        <TextView
                android:text="@string/teamDraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"
                android:textStyle="bold" android:textAlignment="center" android:textSize="16sp"/>
        <TextView
                android:text="@string/teamLose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_weight="1"
                android:textStyle="bold" android:textAlignment="center" android:textSize="16sp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/standingsRecycler"/>
</LinearLayout>